--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,7 +27,7 @@
 			<section id="banner" class="bg-img" data-bg="banner.jpg">
 				<div class="inner">
 					<header>
-						<h1>This is Road Trip</h1>
+						<h1>holi</h1>
 					</header>
 				</div>
 				<a href="#one" class="more">Learn More</a>
