cambio titulo generic

--- a/views/generic.hbs
+++ b/views/generic.hbs
@@ -29,7 +29,7 @@
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Nibh non lobortis mus nibh</h2>
+							<h2>gabriel diaz villagra</h2>
 							<p>01.01.2017</p>
 						</header>
 						<div class="content">
